--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./src",
-    "start": "node ./src/server.js",
+    "start": "node src/server.js",
     "start:dev": "nodemon ./src/server.js"
   },
   "keywords": [],
